# nextjs-vtuber-mocap

./: .cursorignore  .cursorrules  .gitignore  API_KEY_SETUP.md  CLAUDE.md  CLEAN_CACHE.md  DEBUG_SUMMARY.md  Dockerfile.echuu-backend  ISSUES_FIXED.md  KPI_TRACKING_GUIDE.md  MOUSE_CONTROL_CONFIG.md  OPTIMIZATION_PLAN.md  PERFORMANCE_AND_MAINTENANCE.md  PRD_ECHUU_V1.md  R3F_CANVAS_REFACTOR_PLAN.md  README.md  REFACTOR_TEST_CHECKLIST.md  STARTUP.md  STRIPE_ENV_SETUP.md  STRIPE_PRODUCT_SETUP.md  STRUCTURE.md  THEME_SYSTEM_IMPROVEMENTS.md  create-stripe-products.js  env.config.ts  middleware.ts  next.config.js  package-lock.json  package.json  setup-stripe-env.js  stripe-products-config.json  tailwind.config.js  tsconfig.json
.claude/: settings.local.json
deploy/echuu-backend/public/: .env.example  .gitignore  GEMINI3_FEATURES.md  GITHUB_PUSH_READY.md  HACKATHON.md  LICENSE  QUICKSTART.md  README.md  generate_japanese_audio.py  push_to_github.bat  push_to_github.sh  pyproject.toml  requirements.txt
deploy/echuu-backend/public/echuu/: README.md  __init__.py
deploy/echuu-backend/public/echuu/core/: __init__.py  digression_db.py  drama_amplifier.py  emotion_mixer.py  pattern_analyzer.py  performer_cue.py  story_nucleus.py  structure_breaker.py  trigger_bank.py
deploy/echuu-backend/public/echuu/generators/: __init__.py  example_sampler.py  script_generator_v4.py
deploy/echuu-backend/public/echuu/live/: __init__.py  audio_player.py  danmaku.py  engine.py  gemini_client.py  language.py  llm_client.py  llm_factory.py  performer.py  response_generator.py  state.py  tts_client.py
deploy/echuu-backend/public/echuu/vrm/: __init__.py  mapper.py  presets.py
deploy/echuu-backend/public/examples/: demo.py  hackathon_demo.py  test_multilingual.py  test_user_memory.py
deploy/echuu-backend/public/output/examples/: example_chinese_canteen.json  example_english_algorithm.json  example_japanese_akihabara.json
docs/: ANIMATION_BLENDING_SOLUTION.md  CLEAN_CACHE.md  DEPLOYMENT_GUIDE.md  LOOKAT_DEBUG_SCRIPTS.md  LOOKAT_SCRIPTS.md  LOOKAT_SCRIPT_FILES.txt  MOUSE_CONTROL_CONFIG.md  PERFORMANCE_AND_MAINTENANCE.md  POSTHOG_SETUP.md  PROJECT_STATUS.md  R3F_CANVAS_REFACTOR_PLAN.md  RAILWAY_BACKEND_DEPLOY.md  README.md  REFACTOR_TEST_CHECKLIST.md  SETUP.md  STRIPE_INTEGRATION.md  STRIPE_SETUP_GUIDE.md  STRUCTURE.md  VRM_HEAD_LOOKAT_SCRIPTS.md  VRM_LOOKAT_SCRIPTS_LIST.txt  animation-retargeting-multi-rig.md  asset-loading-performance.md  backend-todo-livekit-youtube-twitch.md  blender-vs-app-retarget-comparison.md  blender_apply_diagnostic_and_simulate.py  camera-controls-analysis.md  camera-controls-replacement-guide.md  code-compliance-report.md  code-optimization-checklist.md  coding-standards.md  data-flow-architecture.md  file-size-analysis.md  kawaii-retarget-diagnostic-sample.json  kawaii-vrm-alignment-file-index.md  (+17 more)
(+315 files in other folders)
